# junction_telegram_bot

./: .gitignore  main.py  pyproject.toml
app/: backend.py  client.py  keyboards.py  utils.py
constants/: constants.py  texts.py
